src/libastrodb/astrodb.h

struct adb_db;
/********************** Library and debug *************************************/

/*! \typedef enum adb_msg_level
 * \ingroup Library
 *
 * AstroDB message level.
 */
enum adb_msg_level {
	ADB_MSG_NONE	= 0,
	ADB_MSG_INFO 	= 1,
	ADB_MSG_WARN	= 2,
	ADB_MSG_DEBUG	= 3,
	ADB_MSG_VDEBUG	= 4,
};
/*! \fn adb_library* adb_open_library(char *remote, char* local);
 * \brief Create a library
 * \ingroup library
 */
void adb_set_msg_level(struct adb_db *db, enum adb_msg_level level);
/*! \fn adb_library* adb_open_library(char *remote, char* local);
 * \brief Create a library
 * \ingroup library
 */
void adb_set_log_level(struct adb_db *db, unsigned int log);
/*! \struct adb_pobject
 * \brief Plate object
 * \ingroup solve
 */
struct adb_pobject {
	int x;
	int y;
	unsigned int adu;
};
enum adb_constraint {
	ADB_CONSTRAINT_MAG,
	ADB_CONSTRAINT_FOV,
	ADB_CONSTRAINT_RA,
	ADB_CONSTRAINT_DEC,
	/* TODO add others */
};
enum adb_find {
	ADB_FIND_ALL,
	ADB_FIND_FIRST,
};
struct adb_solve;
 /*! \fn adb_search* adb_search_new(adb_table *table);
 * \brief Creates an new search object
 * \ingroup search
 */
struct adb_solve *adb_solve_new(struct adb_db *db, int table_id);
/*! \fn void adb_search_free(adb_search* search);
 * \brief Free's a search and it resources
 * \ingroup search
 */
void adb_solve_free(struct adb_solve *solve);
int adb_solve_set_magnitude_delta(struct adb_solve *solve,
		double delta_mag);
int adb_solve_set_distance_delta(struct adb_solve *solve,
		double delta_pixels);
int adb_solve_set_pa_delta(struct adb_solve *solve,
		double delta_degrees);
/*! \fn int adb_search_add_operator(adb_search* search, adb_operator op);
 * \brief Add an operation in RPN to the search
 * \ingroup search
 */
int adb_solve_add_plate_object(struct adb_solve *solve,
				struct adb_pobject *pobject);
/*! \fn int adb_search_add_comparator(adb_search* search, char* field,
					adb_comparator compare, char* value);
 * \brief Add a comparator_t in RPN to the search
 * \ingroup search
 */
int adb_solve_constraint(struct adb_solve *solve,
		enum adb_constraint type, double min, double max);
/*! \fn int adb_solve(struct adb_solve *solve,
				struct adb_object_set *set,
				struct adb_solve_objects **solve_objects[],
				double dist_coeff, double mag_coeff,
				double pa_coeff);
 * \brief Execute a search
 * \ingroup search
 */
int adb_solve(struct adb_solve *solve,
				struct adb_object_set *set, enum adb_find find);