python/astrodb/lib.py


# int adb_table_import_alt_dataset(struct adb_db *db, int table_id, const char *dataset, int num_objects);
libadb.adb_table_import_alt_dataset.argtypes = [adb_db_p, ctypes.c_int, ctypes.c_char_p, ctypes.c_int]
libadb.adb_table_import_alt_dataset.restype = ctypes.c_int

# void adb_set_msg_level(struct adb_db *db, enum adb_msg_level level);
libadb.adb_set_msg_level.argtypes = [adb_db_p, ctypes.c_int]
libadb.adb_set_msg_level.restype = None

# void adb_set_log_level(struct adb_db *db, unsigned int log);
libadb.adb_set_log_level.argtypes = [adb_db_p, ctypes.c_uint]
libadb.adb_set_log_level.restype = None


### Solver Bindings ###

# Constants
ADB_CONSTRAINT_MAG = 0
ADB_CONSTRAINT_FOV = 1
ADB_CONSTRAINT_RA = 2
ADB_CONSTRAINT_DEC = 3
ADB_CONSTRAINT_AREA = 4
ADB_CONSTRAINT_JD = 5
ADB_CONSTRAINT_POBJECTS = 6

ADB_FIND_ALL = 1 << 0
ADB_FIND_FIRST = 1 << 1
ADB_FIND_PLANETS = 1 << 2
ADB_FIND_ASTEROIDS = 1 << 3
ADB_FIND_PROPER_MOTION = 1 << 4

ADB_BOUND_TOP_RIGHT = 0
ADB_BOUND_TOP_LEFT = 1
ADB_BOUND_BOTTOM_RIGHT = 2
ADB_BOUND_BOTTOM_LEFT = 3
ADB_BOUND_CENTRE = 4

# struct adb_solve *adb_solve_new(struct adb_db *db, int table_id);
libadb.adb_solve_new.argtypes = [adb_db_p, ctypes.c_int]
libadb.adb_solve_new.restype = adb_solve_p

# void adb_solve_free(struct adb_solve *solve);
libadb.adb_solve_free.argtypes = [adb_solve_p]
libadb.adb_solve_free.restype = None

# int adb_solve_set_magnitude_delta(struct adb_solve *solve, double delta_mag);
libadb.adb_solve_set_magnitude_delta.argtypes = [adb_solve_p, ctypes.c_double]
libadb.adb_solve_set_magnitude_delta.restype = ctypes.c_int

# int adb_solve_set_distance_delta(struct adb_solve *solve, double delta_pixels);
libadb.adb_solve_set_distance_delta.argtypes = [adb_solve_p, ctypes.c_double]
libadb.adb_solve_set_distance_delta.restype = ctypes.c_int

# int adb_solve_set_pa_delta(struct adb_solve *solve, double delta_degrees);
libadb.adb_solve_set_pa_delta.argtypes = [adb_solve_p, ctypes.c_double]
libadb.adb_solve_set_pa_delta.restype = ctypes.c_int

# int adb_solve_add_plate_object(struct adb_solve *solve, struct adb_pobject *pobject);
libadb.adb_solve_add_plate_object.argtypes = [adb_solve_p, ctypes.POINTER(adb_pobject)]
libadb.adb_solve_add_plate_object.restype = ctypes.c_int

# int adb_solve_constraint(struct adb_solve *solve, enum adb_constraint type, double min, double max);
libadb.adb_solve_constraint.argtypes = [adb_solve_p, ctypes.c_int, ctypes.c_double, ctypes.c_double]
libadb.adb_solve_constraint.restype = ctypes.c_int

# int adb_solve(struct adb_solve *solve, struct adb_object_set *set, enum adb_find find);
libadb.adb_solve.argtypes = [adb_solve_p, adb_object_set_p, ctypes.c_int]
libadb.adb_solve.restype = ctypes.c_int

# struct adb_solve_solution *adb_solve_get_solution(struct adb_solve *solve, unsigned int solution);
libadb.adb_solve_get_solution.argtypes = [adb_solve_p, ctypes.c_uint]
libadb.adb_solve_get_solution.restype = adb_solve_solution_p

# int adb_solution_get_objects(struct adb_solve_solution *solution);
libadb.adb_solution_get_objects.argtypes = [adb_solve_solution_p]
libadb.adb_solution_get_objects.restype = ctypes.c_int

# double adb_solution_divergence(struct adb_solve_solution *solution);
libadb.adb_solution_divergence.argtypes = [adb_solve_solution_p]
libadb.adb_solution_divergence.restype = ctypes.c_double

# struct adb_solve_object *adb_solution_get_object(struct adb_solve_solution *solution, int index);
libadb.adb_solution_get_object.argtypes = [adb_solve_solution_p, ctypes.c_int]
libadb.adb_solution_get_object.restype = adb_solve_object_p

# double adb_solution_get_pixel_size(struct adb_solve_solution *solution);
libadb.adb_solution_get_pixel_size.argtypes = [adb_solve_solution_p]
libadb.adb_solution_get_pixel_size.restype = ctypes.c_double

# void adb_solution_get_plate_equ_bounds(struct adb_solve_solution *solution, enum adb_plate_bounds bounds, double *ra, double *dec);
libadb.adb_solution_get_plate_equ_bounds.argtypes = [adb_solve_solution_p, ctypes.c_int, ctypes.POINTER(ctypes.c_double), ctypes.POINTER(ctypes.c_double)]
libadb.adb_solution_get_plate_equ_bounds.restype = None

# void adb_solution_plate_to_equ_position(struct adb_solve_solution *solution, int x, int y, double *ra, double *dec);
libadb.adb_solution_plate_to_equ_position.argtypes = [adb_solve_solution_p, ctypes.c_int, ctypes.c_int, ctypes.POINTER(ctypes.c_double), ctypes.POINTER(ctypes.c_double)]
libadb.adb_solution_plate_to_equ_position.restype = None

# void adb_solution_equ_to_plate_position(struct adb_solve_solution *solution, double ra, double dec, double *x, double *y);
libadb.adb_solution_equ_to_plate_position.argtypes = [adb_solve_solution_p, ctypes.c_double, ctypes.c_double, ctypes.POINTER(ctypes.c_double), ctypes.POINTER(ctypes.c_double)]
libadb.adb_solution_equ_to_plate_position.restype = None

